--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
   
 <head> 
-    <title> Taejune Park </title> 
+    <title> 스마트폰 카메라 그리고 포토북 (이종경) </title> 
     <style type="text/css"> 
         html { 
             overflow: auto; 
@@ -35,6 +35,7 @@
             marginwidth="0" 
             width="100%" 
             height="100%" 
+            align="middle"
             scrolling="auto"> 
   </iframe> 
   
