--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 </head> 
   
 <body> 
+    <p align="center">
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vQDidn5M8Y_RFZop5Je_AZJe90ZCyOe05fe21MON2XYN5f8zVGBhpTsHJyleKY80e-q74coxgucWV0Y/pub?embedded=true"
             frameborder="0" 
             marginheight="0" 
             marginwidth="0" 
             width="100%" 
             height="100%" 
-            align="middle"
             scrolling="auto"> 
-  </iframe> 
-  
+    </iframe> 
+    </p>
 </body> 
   
 </html> 
