--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head> 
   
 <body> 
+    <p align="middle">
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vQDidn5M8Y_RFZop5Je_AZJe90ZCyOe05fe21MON2XYN5f8zVGBhpTsHJyleKY80e-q74coxgucWV0Y/pub?embedded=true"
             frameborder="0" 
             marginheight="0" 
@@ -37,6 +38,7 @@
             height="100%" 
             scrolling="auto"> 
     </iframe> 
+    </p>
 </body> 
   
 </html> 
