--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
   
 <head> 
     <title> 스마트폰 카메라 그리고 포토북 (이종경) </title> 
+      <style type="text/css"> 
+        html { 
+            overflow: auto; 
+        } 
+          
+        html, 
+        body, 
+        div, 
+        iframe { 
+            margin: 0px; 
+            padding: 0px; 
+            height: 100%; 
+            border: none; 
+        } 
+          
+        iframe { 
+            display: block; 
+            width: 100%; 
+            border: none; 
+            overflow-y: auto; 
+            overflow-x: hidden; 
+        } 
+    </style> 
 </head> 
   
 <body> 
-    <p align="middle">
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vQDidn5M8Y_RFZop5Je_AZJe90ZCyOe05fe21MON2XYN5f8zVGBhpTsHJyleKY80e-q74coxgucWV0Y/pub?embedded=true"
             frameborder="0" 
             marginheight="0" 
@@ -14,7 +36,6 @@
             width="100%" 
             height="100%" 
             scrolling="auto"> 
-    </iframe> 
     </p>
 </body> 
   
