--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             width="100%" 
             height="100%" 
             scrolling="auto"> 
-    </p>
+  </iframe> 
 </body> 
   
 </html> 
