--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
           
         html, 
         body, 
-        div, 
+        div{
+            text-align: center;
+        }
         iframe { 
             margin: 0px; 
             padding: 0px; 
@@ -29,6 +31,7 @@
 </head> 
   
 <body> 
+    <div>
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vQDidn5M8Y_RFZop5Je_AZJe90ZCyOe05fe21MON2XYN5f8zVGBhpTsHJyleKY80e-q74coxgucWV0Y/pub?embedded=true"
             frameborder="0" 
             marginheight="0" 
@@ -37,6 +40,7 @@
             height="100%" 
             scrolling="auto"> 
   </iframe> 
+  </div>
 </body> 
   
 </html> 
