--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html> 
   
 <head> 
-    <title> 스마트폰 카메라 그리고 포토북 (이종경) </title> 
-      <style type="text/css"> 
+    <title> Taejune Park </title> 
+    <style type="text/css"> 
         html { 
             overflow: auto; 
         } 
@@ -11,35 +11,32 @@
         html, 
         body, 
         div{
-            text-align: center;
-        }
+	    width: 100%;
+	    height: 100%;
+	    text-align:center;
+ 
+	}
         iframe { 
             margin: 0px; 
             padding: 0px; 
+ 
+            width: 1024px; 
             height: 100%; 
-            border: none; 
-            display: block; 
-            width: 100%; 
-            border: none; 
-            overflow-y: auto; 
-            overflow-x: hidden; 
-        } 
+            border: none;
+	    overflow-y: auto;
+        }
+          
     </style> 
 </head> 
   
 <body> 
-    test 
-  
-    <div>
+
+	<div>   
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vQDidn5M8Y_RFZop5Je_AZJe90ZCyOe05fe21MON2XYN5f8zVGBhpTsHJyleKY80e-q74coxgucWV0Y/pub?embedded=true"
-            frameborder="0" 
-            marginheight="0" 
-            marginwidth="0" 
-            width="100%" 
-            height="100%" 
             scrolling="auto"> 
   </iframe> 
-  </div>
+	</div>
+
 </body> 
   
 </html> 
