--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html> 
   
 <head> 
-    <title> Taejune Park </title> 
+    <title> 이종경-사진수업 </title> 
     <style type="text/css"> 
         html { 
             overflow: auto; 
         } 
           
-        html, 
-        body, 
+        html, body {
+	    width: 100%;
+	    height: 100%;
+	}
         div{
 	    width: 100%;
 	    height: 100%;
 	    text-align:center;
- 
 	}
         iframe { 
             margin: 0px; 
             padding: 0px; 
  
-            width: 1024px; 
+            width: 100%; 
             height: 100%; 
             border: none;
-	    overflow-y: auto;
+	    display: block;
         }
           
     </style> 
@@ -33,7 +34,7 @@
 
 	<div>   
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vQDidn5M8Y_RFZop5Je_AZJe90ZCyOe05fe21MON2XYN5f8zVGBhpTsHJyleKY80e-q74coxgucWV0Y/pub?embedded=true"
-            scrolling="auto"> 
+            scrolling="auto"  allowfullscreen=”allowfullscreen”> 
   </iframe> 
 	</div>
 
